Better display options (overflow to make sure top row doesn't change size on different screens. Board can now fit automatically to screen size on load and by pressing a button.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,24 @@
 	margin: 0px;
 }
 
-
-
 .topbar {
 	font-family: Helvetica;
-	width: 100%;
-	height: 5%;
+/*	width: 100%;*/
+	height: 6em;
 	background-color: #007;
 	color: white;
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
 }	
 	
 	.game-of-life {
-		display: inline-block;
+		display: inline;
 		font-size: 3em;
 		font-family: Lobster, David;
 		height: 100%;
 		margin: 0.3em;
+        padding: 0 2em 0 0;
 		text-shadow: -3px -2px 2px #555;
 	}
 
@@ -50,7 +52,7 @@
 	}
 
 	.topbar input[type="number"] {
-		height: 1em;
+		height: 1.3em;
 		width: 3em;
 		font-size: 1em;
 		text-align: center;
@@ -94,6 +96,10 @@
 			.rulesControl {
 				display: inline-block;
 			}
+
+            .pause {
+                display: none;
+            }
 
 .gameArea {
 	display: block;
